--- a/source/TB1539_PolyCafe/TB1539_PolyCafe/GUI_PolyCafe/GUI_PolyCafe.csproj
+++ b/source/TB1539_PolyCafe/TB1539_PolyCafe/GUI_PolyCafe/GUI_PolyCafe.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BLL_PolyCafe\BLL_PolyCafe.csproj" />
     <ProjectReference Include="..\DTO_PolyCafe\DTO_PolyCafe.csproj" />
+    <ProjectReference Include="..\UTIL_PolyCafe\UTIL_PolyCafe.csproj" />
   </ItemGroup>
 
 </Project>
